--- a/data/kg/compound_protein/meta.yaml
+++ b/data/kg/compound_protein/meta.yaml
@@ -2,6 +2,30 @@
 name: compound_protein
 description: Knowledgegraph data samples.
 targets:
+    - id: node1_type
+      description: node1_type
+      type: Other
+      units: node1_type
+      names:
+          - noun: node1_type
+    - id: node1_name
+      description: node1_name
+      type: Other
+      units: node1_name
+      names:
+          - noun: node1_name
+    - id: node1_id
+      description: node1_id
+      type: Other
+      units: node1_id
+      names:
+          - noun: node1_id
+    - id: rel1_type
+      description: rel1_type
+      type: Other
+      units: rel1_type
+      names:
+          - noun: rel1_type
     - id: node2_type
       description: node2_type
       type: Other
@@ -27,26 +51,14 @@ targets:
       names:
           - noun: node2_id
 identifiers:
-    - id: node1_type
-      description: node1_type
-      type: Other
-    - id: node1_smiles
-      description: node1_smiles
-      type: Other
-    - id: node1_name
-      description: node1_name
-      type: Other
-    - id: node1_id
-      description: node1_id
-      type: Other
-    - id: rel1_type
-      description: rel1_type
-      type: Other
+    - id: SMILES
+      description: SMILES
+      type: SMILES
 license: CC BY 4.0
 links:
     - url: https://crossbar.kansil.org
       description: original knowledge graph web GUI link
-num_points: 630251
+num_points: 619840
 bibtex:
     - "@article{10.1093/nar/gkab543,\nauthor = {Doğan, Tunca and Atas, Heval and Joshi, Vishal and Atakan, Ahmet and Rifaioglu, Ahmet Sureyya and Nalbat,\
       \ Esra and Nightingale, Andrew and Saidi, Rabie and Volynkin, Vladimir and Zellner, Hermann and Cetin-Atalay, Rengul and Martin, Maria and Atalay,\
@@ -54,8 +66,8 @@ bibtex:
       \ Research},\nvolume = {49},\nnumber = {16},\npages = {e96-e96},\nyear = {2021},\nmonth = {06},\nissn = {0305-1048},\ndoi = {10.1093/nar/gkab543},\n\
       url = {https://doi.org/10.1093/nar/gkab543},\n}"
 templates:
-    - The {node1_type#} SMILES {node1_smiles#} {rel1_type#} the {node2_type#} {node2_protein_names#}.
-    - The {node2_type#} {node2_protein_names#} is targeted by the drug with the SMILES {node1_smiles#}.
+    - The {node1_type#} {SMILES__description} {SMILES#} {rel1_type#} the {node2_type#} {node2_protein_names#}.
+    - The {node2_type#} {node2_protein_names#} is targeted by the drug with the {SMILES__description} {SMILES#}.
     - |-
-      User: Can you give me an example for a {node1_type#} SMILES that {rel1_type#} the {node2_type#} {node2_protein_names#}?
-      Assistant: Yes, The {node1_type#} SMILES {node1_smiles#} {rel1_type#} the {node2_type#} {node2_protein_names#}.
+      User: Can you {#give me|come up with!} {#one|an!} example for a {node1_type#} {SMILES__description} that {rel1_type#} the {node2_type#} {node2_protein_names#}?
+      Assistant: {#Yes|Of course|Yes, of course|Sure!}, the {node1_type#} {SMILES__description} {SMILES#} {rel1_type#} the {node2_type#} {node2_protein_names#}.
