--- a/data/kg/compound_protein_compound_3/meta.yaml
+++ b/data/kg/compound_protein_compound_3/meta.yaml
@@ -1,5 +1,5 @@
 ---
-name: compound_chebi
+name: compound_protein_compound_3
 description: Knowledgegraph data samples.
 targets:
     - id: node1_type
@@ -38,12 +38,48 @@ targets:
       units: node2_name
       names:
           - noun: node2_name
+    - id: node2_protein_names
+      description: node2_protein_names
+      type: Other
+      units: node2_protein_names
+      names:
+          - noun: node2_protein_names
     - id: node2_id
       description: node2_id
       type: Other
       units: node2_id
       names:
           - noun: node2_id
+    - id: rel2_type
+      description: rel2_type
+      type: Other
+      units: rel2_type
+      names:
+          - noun: rel2_type
+    - id: node3_type
+      description: node3_type
+      type: Other
+      units: node3_type
+      names:
+          - noun: node3_type
+    - id: node3_smiles
+      description: node3_smiles
+      type: Other
+      units: node3_smiles
+      names:
+          - noun: node3_smiles
+    - id: node3_name
+      description: node3_name
+      type: Other
+      units: node3_name
+      names:
+          - noun: node3_name
+    - id: node3_id
+      description: node3_id
+      type: Other
+      units: node3_id
+      names:
+          - noun: node3_id
 identifiers:
     - id: SMILES
       description: SMILES
@@ -52,7 +88,7 @@ license: CC BY 4.0
 links:
     - url: https://crossbar.kansil.org
       description: original knowledge graph web GUI link
-num_points: 6754
+num_points: 9764124
 bibtex:
     - "@article{10.1093/nar/gkab543,\nauthor = {Doğan, Tunca and Atas, Heval and Joshi, Vishal and Atakan, Ahmet and Rifaioglu, Ahmet Sureyya and Nalbat,\
       \ Esra and Nightingale, Andrew and Saidi, Rabie and Volynkin, Vladimir and Zellner, Hermann and Cetin-Atalay, Rengul and Martin, Maria and Atalay,\
@@ -60,10 +96,10 @@ bibtex:
       \ Research},\nvolume = {49},\nnumber = {16},\npages = {e96-e96},\nyear = {2021},\nmonth = {06},\nissn = {0305-1048},\ndoi = {10.1093/nar/gkab543},\n\
       url = {https://doi.org/10.1093/nar/gkab543},\n}"
 templates:
-    - The {node1_type#} {SMILES__description} {SMILES#} {rel1_type#} {node2_name#}.
+    - The {node1_type#} {SMILES__description} {SMILES#} {rel1_type#} the {node2_type#} {node2_protein_names#} and {rel2_type#} the {node3_type#} {node3_smiles#}.
+    - The {node2_type#} {node2_protein_names#} is targeted by the compound with the {SMILES__description} {SMILES#} and {node3_smiles#}.
     - |-
-      Task: Please {#create|generate!} {#a compound |a !}{SMILES__description} that {rel1_type#} {node2_name#}.
-      Result: {SMILES#}
-    - |-
-      Task: Please {#create|generate!} {#a compound |a !}{SMILES__description} that {rel1_type#} {node2_name#}.
-      Result:<EOI> {SMILES#}
+      User: Can you {#give me|come up with!} {#one|an!} example for a {node1_type#} {SMILES__description} that {rel1_type#} the {node2_type#} {node2_protein_names#}?
+      Assistant: {#Yes|Of course|Yes, of course|Sure!}, the {node1_type#} {SMILES__description} {SMILES#} {rel1_type#} the {node2_type#} {node2_protein_names#}.
+      User: Can you {#tell|create|generate!} another {node1_type#} {SMILES__description} that {rel1_type#} the {node2_type#} {node2_protein_names#}?
+      Assistant: {#Sure|Yes|Of course|Yes, of course!}, the {node1_type#} {SMILES__description} {SMILES#} {rel1_type#} the {node3_type#} {SMILES__description} {node3_smiles#}.
