--- a/data/kg/drug_disease_pathway_protein/meta.yaml
+++ b/data/kg/drug_disease_pathway_protein/meta.yaml
@@ -1,19 +1,37 @@
 ---
-name: compound_protein_go_term
+name: drug_disease_pathway_protein
 description: Knowledgegraph data samples.
 targets:
+    - id: node1_type
+      description: node1_type
+      type: Other
+      units: node1_type
+      names:
+          - noun: node1_type
+    - id: node1_name
+      description: node1_name
+      type: Other
+      units: node1_name
+      names:
+          - noun: node1_name
+    - id: node1_id
+      description: node1_id
+      type: Other
+      units: node1_id
+      names:
+          - noun: node1_id
+    - id: rel1_type
+      description: rel1_type
+      type: Other
+      units: rel1_type
+      names:
+          - noun: rel1_type
     - id: node2_type
       description: node2_type
       type: Other
       units: node2_type
       names:
           - noun: node2_type
-    - id: node2_protein_names
-      description: node2_protein_names
-      type: Other
-      units: node2_protein_names
-      names:
-          - noun: node2_protein_names
     - id: node2_name
       description: node2_name
       type: Other
@@ -50,27 +68,45 @@ targets:
       units: node3_id
       names:
           - noun: node3_id
+    - id: rel3_type
+      description: rel3_type
+      type: Other
+      units: rel3_type
+      names:
+          - noun: rel3_type
+    - id: node4_type
+      description: node4_type
+      type: Other
+      units: node4_type
+      names:
+          - noun: node4_type
+    - id: node4_name
+      description: node4_name
+      type: Other
+      units: node4_name
+      names:
+          - noun: node4_name
+    - id: node4_protein_names
+      description: node4_protein_names
+      type: Other
+      units: node4_protein_names
+      names:
+          - noun: node4_protein_names
+    - id: node4_id
+      description: node4_id
+      type: Other
+      units: node4_id
+      names:
+          - noun: node4_id
 identifiers:
-    - id: node1_type
-      description: node1_type
-      type: Other
-    - id: node1_smiles
-      description: node1_smiles
-      type: Other
-    - id: node1_name
-      description: node1_name
-      type: Other
-    - id: node1_id
-      description: node1_id
-      type: Other
-    - id: rel1_type
-      description: rel1_type
-      type: Other
+    - id: SMILES
+      description: SMILES
+      type: SMILES
 license: CC BY 4.0
 links:
     - url: https://crossbar.kansil.org
       description: original knowledge graph web GUI link
-num_points: 14695
+num_points: 33215
 bibtex:
     - "@article{10.1093/nar/gkab543,\nauthor = {Doğan, Tunca and Atas, Heval and Joshi, Vishal and Atakan, Ahmet and Rifaioglu, Ahmet Sureyya and Nalbat,\
       \ Esra and Nightingale, Andrew and Saidi, Rabie and Volynkin, Vladimir and Zellner, Hermann and Cetin-Atalay, Rengul and Martin, Maria and Atalay,\
@@ -78,6 +114,5 @@ bibtex:
       \ Research},\nvolume = {49},\nnumber = {16},\npages = {e96-e96},\nyear = {2021},\nmonth = {06},\nissn = {0305-1048},\ndoi = {10.1093/nar/gkab543},\n\
       url = {https://doi.org/10.1093/nar/gkab543},\n}"
 templates:
-    - The {node1_type#} {node1_smiles#} {rel1_type#} the {node2_type#} {node2_protein_names#} which {rel2_type#} the {node3_name#}.
-    - The {node1_type#} {node1_smiles#} {rel1_type#} the {node2_type#} {node2_protein_names#}. The {node2_type#} {node2_protein_names#} {rel2_type#} the
-      {node3_name#}.
+    - The {node1_type#} {SMILES#|node1_name#} is indicated for the {node2_name#} {node2_type#} and {rel2_type#} the {node3_name#} {node3_type#}. The {node3_type#}
+      {node3_name#} {rel3_type#} the {node4_type#} {node4_protein_names#}.
