--- a/data/kg/drug_protein_protein/meta.yaml
+++ b/data/kg/drug_protein_protein/meta.yaml
@@ -2,6 +2,30 @@
 name: drug_protein_protein
 description: Knowledgegraph data samples.
 targets:
+    - id: node1_type
+      description: node1_type
+      type: Other
+      units: node1_type
+      names:
+          - noun: node1_type
+    - id: node1_name
+      description: node1_name
+      type: Other
+      units: node1_name
+      names:
+          - noun: node1_name
+    - id: node1_id
+      description: node1_id
+      type: Other
+      units: node1_id
+      names:
+          - noun: node1_id
+    - id: rel1_type
+      description: rel1_type
+      type: Other
+      units: rel1_type
+      names:
+          - noun: rel1_type
     - id: node2_type
       description: node2_type
       type: Other
@@ -57,26 +81,14 @@ targets:
       names:
           - noun: node3_id
 identifiers:
-    - id: node1_type
-      description: node1_type
-      type: Other
-    - id: node1_smiles
-      description: node1_smiles
-      type: Other
-    - id: node1_name
-      description: node1_name
-      type: Other
-    - id: node1_id
-      description: node1_id
-      type: Other
-    - id: rel1_type
-      description: rel1_type
-      type: Other
+    - id: SMILES
+      description: SMILES
+      type: SMILES
 license: CC BY 4.0
 links:
     - url: https://crossbar.kansil.org
       description: original knowledge graph web GUI link
-num_points: 269234
+num_points: 245582
 bibtex:
     - "@article{10.1093/nar/gkab543,\nauthor = {Doğan, Tunca and Atas, Heval and Joshi, Vishal and Atakan, Ahmet and Rifaioglu, Ahmet Sureyya and Nalbat,\
       \ Esra and Nightingale, Andrew and Saidi, Rabie and Volynkin, Vladimir and Zellner, Hermann and Cetin-Atalay, Rengul and Martin, Maria and Atalay,\
@@ -84,10 +96,10 @@ bibtex:
       \ Research},\nvolume = {49},\nnumber = {16},\npages = {e96-e96},\nyear = {2021},\nmonth = {06},\nissn = {0305-1048},\ndoi = {10.1093/nar/gkab543},\n\
       url = {https://doi.org/10.1093/nar/gkab543},\n}"
 templates:
-    - The {node1_type#} {node1_name#|node1_smiles#} {rel1_type#} the {node2_type#} {node2_protein_names#} which {rel2_type#} the {node3_type#} {node3_name#}.
-    - The {node2_type#} {node2_protein_names#} is targeted by {node1_name#|node1_smiles#}. The {node2_type#} {node2_protein_names#} {rel2_type#} {node3_name#}.
+    - The {node1_type#} {SMILES#|node1_name#} {rel1_type#} the {node2_type#} {node2_protein_names#} which {rel2_type#} the {node3_type#} {node3_name#}.
+    - The {node2_type#} {node2_protein_names#} is targeted by {SMILES#|node1_name#}. The {node2_type#} {node2_protein_names#} {rel2_type#} {node3_name#}.
     - |-
-      User: Can you give me an example for a protein that binds the {node1_type#} {node1_name#|node1_smiles#}?
-      Assistant: The {node1_type#} {node1_name#|node1_smiles#} {rel1_type#} for example the {node2_type#} {node2_protein_names#}.
+      User: {#Can you give me|Can you come up with!} {#an|one!} example for a protein that binds the {node1_type#} {SMILES#|node1_name#}?
+      Assistant: The {node1_type#} {SMILES#|node1_name#} {rel1_type#} for example the {node2_type#} {node2_protein_names#}.
       User: Can you tell me a {node3_type#} that {rel2_type#} {node2_type#} {node2_protein_names#}?
-      Assistant: Yes, the {node2_type#} {node2_name#} {rel2_type#} {node3_name#}.
+      Assistant: {#Yes|Of course|Yes, of course|Sure!}, the {node2_type#} {node2_name#} {rel2_type#} {node3_type#} {node3_name#}.
