--- a/data/tabular/uniprot_binding_sites_multiple/meta.yaml
+++ b/data/tabular/uniprot_binding_sites_multiple/meta.yaml
@@ -1,5 +1,5 @@
 ---
-name: uniprot_binding_sites
+name: uniprot_binding_sites_multiple
 description: |-
     Binding sites of a molecule in protein sequences.
 targets:
@@ -9,7 +9,7 @@ targets:
       names:
           - noun: start binding site
     - id: end_binding_site
-      description: index for emd of the binding sites of a protein
+      description: index for end of the binding sites of a protein
       type: text
       names:
           - noun: end binding site
@@ -26,7 +26,7 @@ license: MIT
 links:
     - url: https://www.uniprot.org/
       description: data source
-num_points: 780449
+num_points: 176066
 bibtex:
     - |-
       @article{10.1093/nar/gkac1052,
@@ -45,10 +45,9 @@ templates:
 #    - |-
 #      The {#molecule|chemical|compound!} with the {SMILES__description}{# representation|!} {SMILES#} binds to the {#AA sequence|amino acid sequence|peptide sequence|protein!} {sequence#} at the {#site|binding site|position!} {start_binding_site#}{#-| to !}{end_binding_site#}.
     - |-
-      Task: {#Find|Identify|Come up with!} a binding site in the {#AA sequence|amino acid sequence|peptide sequence|protein!} for the {#molecule|chemical|compound!}.
+      Task: {#Find|Identify|Come up with!} a binding site for the {#molecule|chemical|compound!} in the {#AA sequence|amino acid sequence|peptide sequence|protein!}.
       {#AA sequence|Amino acid sequence|Peptide sequence|Protein!}: {sequence#}
       {SMILES__description}{# representation|!}: {SMILES#}
-      Constraint: Please {#always |!}{#indicate|show!} the {#site|binding site|position!} with a range without any additional words. When {#the range is of length one|the length is one!} please use the same {#index|position!} for the {#start|beginning!} and the end{# position|!}.
       {#Output|Result!}: {start_binding_site#}-{end_binding_site#}
     - |-
       Task: {#Create|Design|Come up with!} a {#molecule|chemical|compound!} that binds to the given {#binding site|site|position|!} in the {#AA sequence|amino acid sequence|peptide sequence|protein!}.
@@ -66,7 +65,6 @@ templates:
       Task: {#Find|Identify|Come up with!} a binding site in the {#AA sequence|amino acid sequence|peptide sequence|protein!} for the {#molecule|chemical|compound!}.
       {#AA sequence|Amino acid sequence|Peptide sequence|Protein!}: {sequence#}
       {SMILES__description}{# representation|!}: {SMILES#}
-      Constraint: Please {#always |!}{#indicate|show!} the {#site|binding site|position!} with a range without any additional words. When {#the range is of length one|the length is one!} please use the same {#index|position!} for the {#start|beginning!} and the end{# position|!}.
       {#Output|Result!}:<EOI> {start_binding_site#}-{end_binding_site#}
     - |-
       Task: {#Create|Design|Come up with!} a {#molecule|chemical|compound!} that binds to the given {#binding site|site|position|!} in the {#AA sequence|amino acid sequence|peptide sequence|protein!}.
