--- a/data/kg/compound_protein_compound_3/meta.yaml
+++ b/data/kg/compound_protein_compound_3/meta.yaml
@@ -102,5 +102,5 @@ templates:
     - |-
       User: Can you {#give me|come up with!} {#one|an!} example for a {node1_type#} with the {SMILES__description} that {rel1_type#} the {node2_type#} {node2_protein_names#}?
       Assistant: {#Yes|Of course|Yes, of course|Sure!}, the {node1_type#} with the {SMILES__description} {SMILES#} {rel1_type#} the {node2_type#} {node2_protein_names#}.
-      User: Can you {#tell me|create|generate!} {#another|a!} {node1_type#} with {SMILES__description} that {rel1_type#} the {node2_type#} {node2_protein_names#}?
+      User: Can you {#tell me|create|generate!} {#another|a!} {node1_type#} {SMILES__description} that {rel1_type#} the {node2_type#} {node2_protein_names#}?
       Assistant: {#Sure|Yes|Of course|Yes, of course!}, the SMILES{# representation|!} {node3_smiles#} {#also |!}{rel1_type#} the {node2_type#} {node2_protein_names#}.
