--- a/data/kg/drug_chebi_chebi_chebi/meta.yaml
+++ b/data/kg/drug_chebi_chebi_chebi/meta.yaml
@@ -1,4 +1,4 @@
-name: drug_disease_pathway_protein
+name: drug_chebi_chebi_chebi
 description: Knowledgegraph data samples.
 targets:
 - id: node1_type
@@ -85,12 +85,6 @@ targets:
   units: node4_name
   names:
   - noun: node4_name
-- id: node4_protein_names
-  description: node4_protein_names
-  type: Other
-  units: node4_protein_names
-  names:
-  - noun: node4_protein_names
 - id: node4_id
   description: node4_id
   type: Other
@@ -105,7 +99,7 @@ license: CC BY 4.0
 links:
 - url: https://crossbar.kansil.org
   description: original knowledge graph web GUI link
-num_points: 33215
+num_points: 1538960
 bibtex:
 - "@article{10.1093/nar/gkab543,\nauthor = {Do\u011Fan, Tunca and Atas, Heval and\
   \ Joshi, Vishal and Atakan, Ahmet and Rifaioglu, Ahmet\_Sureyya and Nalbat, Esra\
@@ -115,7 +109,4 @@ bibtex:
   ,\njournal = {Nucleic Acids Research},\nvolume = {49},\nnumber = {16},\npages =\
   \ {e96-e96},\nyear = {2021},\nmonth = {06},\nissn = {0305-1048},\ndoi = {10.1093/nar/gkab543},\n\
   url = {https://doi.org/10.1093/nar/gkab543},\n}"
-templates:
-- The {node1_type#} {SMILES#|node1_name#} is indicated for the {node2_name#} {node2_type#}
-  and {rel2_type#} the {node3_name#} {node3_type#}. The {node3_type#} {node3_name#}
-  {rel3_type#} the {node4_type#} {node4_protein_names#}.
+templates: []
