--- a/data/kg/compound_protein_protein/meta.yaml
+++ b/data/kg/compound_protein_protein/meta.yaml
@@ -96,12 +96,10 @@ bibtex:
       \ Research},\nvolume = {49},\nnumber = {16},\npages = {e96-e96},\nyear = {2021},\nmonth = {06},\nissn = {0305-1048},\ndoi = {10.1093/nar/gkab543},\n\
       url = {https://doi.org/10.1093/nar/gkab543},\n}"
 templates:
-    - The {node1_type#} with {SMILES__description} {SMILES#} {rel1_type#} the {node2_type#} {node2_protein_names#} which {rel2_type#} the {node3_type#}
-      {node3_protein_names#}.
-    - The {node2_type#} {node2_protein_names#} is targeted by {node1_type#} with {SMILES__description} {SMILES#}. The {node2_type#} {node2_protein_names#}
-      {rel2_type#} {node3_protein_names#}.
+    - The {node1_type#} {SMILES__description} {SMILES#} {rel1_type#} the {node2_type#} {node2_protein_names#} which {rel2_type#} the {node3_type#} {node3_protein_names#}.
+    - The {node2_type#} {node2_protein_names#} is targeted by the {SMILES__description} {SMILES#}. The {node2_type#} {node2_protein_names#} {rel2_type#} {node3_protein_names#}.
     - |-
-      User: {#Can you give me|Can you come up with!} {#an|one!} example for a protein that binds the {node1_type#} with {SMILES__description} {SMILES#}?
-      Assistant: The {node1_type#} with {SMILES__description} {SMILES#} {rel1_type#} for example the {node2_type#} {node2_protein_names#}.
+      User: {#Can you give me|Can you come up with!} {#an|one!} example for a protein that binds the {node1_type#} with the {SMILES__description} {SMILES#}?
+      Assistant: The {node1_type#} {SMILES__description} {SMILES#} {rel1_type#} for example the {node2_type#} {node2_protein_names#}.
       User: Can you tell me a {node3_type#} that {rel2_type#} {node2_type#} {node2_protein_names#}?
       Assistant: {#Yes|Of course|Yes, of course|Sure!}, the {node2_type#} {node2_protein_names#} {rel2_type#} {node3_protein_names#}.
