--- a/data/kg/drug_chebi_chebi_chebi/meta.yaml
+++ b/data/kg/drug_chebi_chebi_chebi/meta.yaml
@@ -1,5 +1,5 @@
 ---
-name: compound_protein_pathway_disease_2
+name: drug_chebi_chebi_chebi
 description: Knowledgegraph data samples.
 targets:
     - id: node1_type
@@ -38,12 +38,6 @@ targets:
       units: node2_name
       names:
           - noun: node2_name
-    - id: node2_protein_names
-      description: node2_protein_names
-      type: Other
-      units: node2_protein_names
-      names:
-          - noun: node2_protein_names
     - id: node2_id
       description: node2_id
       type: Other
@@ -106,13 +100,11 @@ license: CC BY 4.0
 links:
     - url: https://crossbar.kansil.org
       description: original knowledge graph web GUI link
-num_points: 9780116
+num_points: 1538960
 bibtex:
     - "@article{10.1093/nar/gkab543,\nauthor = {Doğan, Tunca and Atas, Heval and Joshi, Vishal and Atakan, Ahmet and Rifaioglu, Ahmet Sureyya and Nalbat,\
       \ Esra and Nightingale, Andrew and Saidi, Rabie and Volynkin, Vladimir and Zellner, Hermann and Cetin-Atalay, Rengul and Martin, Maria and Atalay,\
       \ Volkan},\ntitle = \"{CROssBAR: comprehensive resource of biomedical relations with knowledge graph representations}\",\njournal = {Nucleic Acids\
       \ Research},\nvolume = {49},\nnumber = {16},\npages = {e96-e96},\nyear = {2021},\nmonth = {06},\nissn = {0305-1048},\ndoi = {10.1093/nar/gkab543},\n\
       url = {https://doi.org/10.1093/nar/gkab543},\n}"
-templates:
-    - The {node1_type#} {SMILES__description} {SMILES#} {rel1_type#} the {node2_type#} {node2_protein_names#}. The {node2_type#} {node2_protein_names#}
-      {rel2_type#} {node3_name#}. The {node3_name#} is {rel3_type#} the {node4_type#} {node4_name#}.
+templates: []
